# store

./: .gitignore  Procfile  README.md  Supeuser_creds.txt  manage.py  pyproject.toml  report.md  requirements.txt
CYBERstore/: cart.py  forms.py  models.py  serializers.py  urls.py  views.py
CYBERstore/templates/: banner.html  brands.html  login.html  master.html  order.html  search.html
CYBERstore/templates/registration/: login.html
CYBERstore/templatetags/: banner.py
STORE/: asgi.py  urls.py
geekshop/: asgi.py  settings.py  storage_backends.py  urls.py  wsgi.py
mainapp/: admin.py  apps.py  basket_logic.py  forms.py  models.py  tokens.py  urls.py  views.py
mainapp/migrations/: 0001_initial.py  0002_auto_20200714_0054.py  0002_auto_20210322_1411.py  0003_auto_20200714_0147.py  0004_auto_20200714_0318.py  0005_banner_subscribed.py  0006_auto_20200726_2317.py  0007_auto_20200726_2322.py
mainapp/static/js/: basket_scripts.js
mainapp/templates/: about.html  acc_active_email.html  basket.html  brands.html  detail.html  edit.html  inc_basket_list.html  index.html  login.html  logout.html  master.html  order.html  ordered.html  register.html  search.html
mainapp/templates/account/: login.html
mainapp/templates/registration/: login.html
mainapp/templatetags/: banner.py
