[tool.poetry]
name = "store"
version = "0.1.0"
description = ""
authors = ["Tony <SjasFaceMD@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.6"
Django = "^3.1.6"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
